Correção para compatiblidade java 8.